Change greeting message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       "@type": "Organization",
       "name": "JHA 360°",
       "url": "https://jha360.com/",
-      "logo": "https://newbharatskills.in/image/New-BharatSkills-logo-removebg-preview.png",
+      "logo": "https://jha360.com/New-BharatSkills-logo-removebg-preview.png",
       "description": "Provider of immersive 360° virtual tours for businesses across India",
       "address": {
         "@type": "PostalAddress",
@@ -51,7 +51,7 @@
         "@type": "ContactPoint",
         "telephone": "+91-8369397726",
         "contactType": "Customer Service",
-        "email": "office@newbharatskills.in"
+        "email": "office@jha360.com"
       },
       "sameAs": [
         "https://www.instagram.com/newbharatskills/",
@@ -830,7 +830,7 @@
                         <li><a href="https://jha360.com/">JHA 360°</a></li>
                         <li><a href="https://newbharatskills.in/workshops.html">Workshops</a></li>
                         <li><a href="https://newbharatskills.in/franchise.html">JHAMU Technologies</a></li>
-                        <li><a href="https://piyushnjha.com/view_blogs.php">Blog</a></li>
+                        <li><a href="https://piyushnjha.com/view_blogs.php" target="_blank">Blog</a></li>
                         <li><a href="https://newbharatskills.in/aboutus.html">About Us</a></li>
                         <li><a href="https://newbharatskills.in/contact.php">Contact</a></li>
                         <li><a href="https://newbharatskills.in/workshops.html" class="btn">Enroll Now</a></li>
@@ -1138,3 +1138,4 @@
     </script>
 </body>
 </html>
+
