--- a/index.html
+++ b/index.html
@@ -1050,7 +1050,7 @@
         <div class="container">
             <div class="cards-container">
                 <div class="card">
-                    <img src="image/image (3).png" alt="Digital Marketing, SEO & Website Development">
+                    <img src="https://newbharatskills.in/image/image (3).png" alt="Digital Marketing, SEO & Website Development">
                     <div class="card-content">
                         <h3>Digital Marketing, SEO & Website Development</h3>
                         <p>Driving growth through smart digital presence</p>
@@ -1059,7 +1059,7 @@
                 </div>
     
                 <div class="card">
-                    <img src="image/image (4).png" alt="Google Professional Services">
+                    <img src="https://newbharatskills.in/image/image (4).png" alt="Google Professional Services">
                     <div class="card-content">
                         <h3>Google Professional Services</h3>
                         <p>Empowering success with certified Google expertise</p>
@@ -1245,6 +1245,7 @@
     </script>
 </body>
 </html>
+
 
 
 
