Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -908,9 +908,8 @@
                 <nav aria-label="Main navigation">
                     <ul>
                         <li><a href="https://newbharatskills.in/">Home</a></li>
-                        <li><a href="https://newbharatskills.in/courses.html">Services</a></li>
                         <li><a href="https://jha360.com/">JHA 360°</a></li>
-                        <li><a href="https://newbharatskills.in/workshops.html">Workshops</a></li>
+                        <li><a href="https://newbharatskills.in/workshops.html">NBS Skills</a></li>
                         <li><a href="https://newbharatskills.in/franchise.html">JHAMU Technologies</a></li>
                         <li><a href="https://piyushnjha.com/view_blogs.php" target="_blank">Blog</a></li>
                         <li><a href="https://newbharatskills.in/aboutus.html">About Us</a></li>
@@ -1097,11 +1096,9 @@
                     <h3>Quick Links</h3>
                     <ul>
                         <li><a href="https://newbharatskills.in/aboutus.html">About Us</a></li>
-                        <li><a href="https://newbharatskills.in/courses.html">Services</a></li>
                         <li><a href="https://jha360.com/">JHA 360°</a></li>
-                        <li><a href="https://newbharatskills.in/workshops.html">Workshops</a></li>
+                        <li><a href="https://newbharatskills.in/workshops.html">NBS Skills</a></li>
                         <li><a href="https://newbharatskills.in/franchise.html">JHAMU Technologies</a></li>
-                        <li><a href="#trusted-agency">Google Trusted Agency</a></li>
                         <li><a href="https://newbharatskills.in/terms-condition.html">Terms & Conditions</a></li>
                         <li><a href="https://newbharatskills.in/privacy-policy.html">Privacy Policy</a></li>
                     </ul>
@@ -1112,12 +1109,8 @@
                         <li><i class="fas fa-map-marker-alt"></i> Mumbai, Maharashtra</li>
                         <li><i class="fas fa-phone"></i> +91 8369397726</li>
                         <li><i class="fas fa-envelope"></i> office@newbharatskills.in</li>
-                        <li><i class="fas fa-clock"></i> Mon-Fri: 9AM-6PM</li>
                     </ul>
                 </div>
-            </div>
-            <div class="copyright">
-                <p>&copy; 2023 NewBharatSkills. All Rights Reserved. | <a href="https://newbharatskills.in/sitemap.xml" style="color: #aaa;">Sitemap</a></p>
             </div>
         </div>
     </footer>
@@ -1245,6 +1238,7 @@
     </script>
 </body>
 </html>
+
 
 
 
