--- a/index.html
+++ b/index.html
@@ -1086,6 +1086,22 @@
                 <h2>Our Virtual Tour Projects</h2>
                 <p>Explore our collection of 360° virtual tours that bring businesses to life. Each tour is fully interactive and accessible directly on this page.</p>
             </div>
+            <!-- project1 -->
+            <div class="project">
+                <div class="project-content">
+                    <h3>Vinayak Aangan - Pushpak Nagar</h3>
+                    <span class="project-category">Real Estate</span>
+                    <p>Discover the elegance of Vinayak Aangan through our comprehensive 360° virtual tour. Explore the well-designed residential spaces, modern amenities, and beautiful surroundings that make this project an ideal living destination.</p>
+                    <div class="project-location">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <span>Pushpak Nagar, Nashik</span>
+                    </div>
+                </div>
+                <div class="project-iframe" id="tour-2">
+                    <!-- Embedded 360° Tour -->
+                    <iframe src="https://www.google.com/maps/embed?pb=!4v1765255905010!6m8!1m7!1sCAoSHENJQUJJaEMzelJidXl0dThtcmRjbU5XcmVKWDc.!2m2!1d18.97354302039362!2d73.07672906024942!3f294.09203839585194!4f-3.4537517131779794!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" title="360° Virtual Tour of Vinayak Aangan - Pushpak Nagar" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
 
             <!-- Project 1 -->
             <div class="project">
