Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1010,7 +1010,7 @@
                     <ul>
                         <li><a href="https://newbharatskills.in/">Home</a></li>
                         <li><a href="https://jha360.com/">JHA 360°</a></li>
-                        <li><a href="https://newbharatskills.in/workshops.html">NBS Skills</a></li>
+                        <li><a href="https://newbharatskills.in/workshops.html">NBS</a></li>
                         <li><a href="https://newbharatskills.in/franchise.html">JHAMU Technologies</a></li>
                         <li><a href="https://piyushnjha.com/view_blogs.php" target="_blank">Blog</a></li>
                         <li><a href="https://newbharatskills.in/aboutus.html">About Us</a></li>
@@ -1398,3 +1398,4 @@
     </script>
 </body>
 </html>
+
