--- a/index.html
+++ b/index.html
@@ -1011,7 +1011,7 @@
                         <li><a href="https://newbharatskills.in/">Home</a></li>
                         <li><a href="https://jha360.com/">JHA 360</a></li>
                         <li><a href="https://newbharatskills.in/workshops.html">NBS</a></li>
-                        <li><a href="https://newbharatskills.in/franchise.html">JHAMU Technologies</a></li>
+                        <li><a href="https://newbharatskills.in/franchise.html">JHAMU</a></li>
                         <li><a href="https://piyushnjha.com/view_blogs.php" target="_blank">Blog</a></li>
                         <li><a href="https://newbharatskills.in/aboutus.html">About Us</a></li>
                         <li><a href="https://newbharatskills.in/contact.php">Contact</a></li>
@@ -1233,8 +1233,8 @@
                     <ul>
                         <li><a href="https://newbharatskills.in/aboutus.html">About Us</a></li>
                         <li><a href="https://jha360.com/">JHA 360</a></li>
-                        <li><a href="https://newbharatskills.in/workshops.html">NBS Skills</a></li>
-                        <li><a href="https://newbharatskills.in/franchise.html">JHAMU Technologies</a></li>
+                        <li><a href="https://newbharatskills.in/workshops.html">NBS</a></li>
+                        <li><a href="https://newbharatskills.in/franchise.html">JHAMU</a></li>
                         <li><a href="https://newbharatskills.in/terms-condition.html">Terms & Conditions</a></li>
                         <li><a href="https://newbharatskills.in/privacy-policy.html">Privacy Policy</a></li>
                     </ul>
@@ -1398,5 +1398,6 @@
     </script>
 </body>
 </html>
+
 
 
