Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1279,17 +1279,17 @@
             <!-- project1 -->
             <div class="project">
                 <div class="project-content">
-                    <h3>Vinayak Aangan - Pushpak Nagar</h3>
+                    <h3>GARG SKY Ajivali</h3>
                     <span class="project-category">Real Estate</span>
-                    <p>Discover the elegance of Vinayak Aangan through our comprehensive 360 virtual tour. Explore the well-designed residential spaces, modern amenities, and beautiful surroundings that make this project an ideal living destination.</p>
+                    <p>Explore GARG SKY Ajivali in a 360° virtual tour and experience premium 2BHK living, world-class amenities on an entire floor, landscaped skyline views, and quick connectivity to the expressway and Navi Mumbai Airport.</p>
                     <div class="project-location">
                         <i class="fas fa-map-marker-alt"></i>
-                        <span>Pushpak Nagar, Nashik</span>
+                        <span>OLD MUMBAI PUNE HIGHWAY, AJIVALI</span>
                     </div>
                 </div>
                 <div class="project-iframe" id="tour-2">
                     <!-- Embedded 360 Tour -->
-                    <iframe src="https://www.google.com/maps/embed?pb=!4v1765255905010!6m8!1m7!1sCAoSHENJQUJJaEMzelJidXl0dThtcmRjbU5XcmVKWDc.!2m2!1d18.97354302039362!2d73.07672906024942!3f294.09203839585194!4f-3.4537517131779794!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" title="360 Virtual Tour of Vinayak Aangan - Pushpak Nagar" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!4v1767612320275!6m8!1m7!1sCAoSHENJQUJJaENRdHlNcGhJdUVyYVNyNWJjLUlJMEM.!2m2!1d18.9548143534162!2d73.1668391892827!3f241.34!4f-5.780000000000001!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
 
@@ -1324,6 +1324,23 @@
                 <div class="project-iframe" id="tour-2">
                     <!-- Embedded 360 Tour -->
                     <iframe src="https://www.google.com/maps/embed?pb=!4v1762763056736!6m8!1m7!1sCAoSHENJQUJJaERreXBUdkJQSXBtdlZnR0Jpa3lpbUo.!2m2!1d18.62227175548513!2d73.65628736485378!3f263.72!4f6.840000000000003!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" title="360 Virtual Tour of K Rocks Resort" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+
+            <!-- project -->
+            <div class="project">
+                <div class="project-content">
+                    <h3>Bikaner House</h3>
+                    <span class="project-category">Store Segment</span>
+                    <p>Explore Bikaner House | Rajasthani Couture in an immersive experience and discover artisan-made silhouettes, rich heritage detailing, and joyful looks designed for every celebration.</p>
+                    <div class="project-location">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <span>Vashi, Maharashtra</span>
+                    </div>
+                </div>
+                <div class="project-iframe" id="tour-2">
+                    <!-- Embedded 360 Tour -->
+                    <iframe src="https://www.google.com/maps/embed?pb=!4v1767612342386!6m8!1m7!1sCAoSHENJQUJJaERqd0s4LWRTNTk2NzcweHlGZ2FjSkE.!2m2!1d19.07221620467219!2d72.99618664884964!3f254.52!4f2.980000000000004!5f0.4000000000000002" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
 
@@ -1712,3 +1729,4 @@
     </script>
 </body>
 </html>
+
