--- a/index.html
+++ b/index.html
@@ -802,8 +802,8 @@
             }
         }
         
-        /* Christmas Popup Styles - ADDED HERE */
-        /* Overlay Styles */
+        /* COMMENTED OUT: Christmas Popup Styles - ADDED HERE
+        /* Overlay Styles 
         .popup-overlay {
             display: none;
             position: fixed;
@@ -823,7 +823,7 @@
             justify-content: center;
         }
 
-        /* Popup Container */
+        /* Popup Container 
         .popup-container {
             position: relative;
             width: 90vw;
@@ -837,7 +837,7 @@
             animation: scaleIn 0.5s cubic-bezier(0.34, 1.56, 0.64, 1);
         }
 
-        /* Main Popup Image */
+        /* Main Popup Image 
         .popup-image {
             width: 100%;
             height: 100%;
@@ -846,7 +846,7 @@
             display: block;
         }
 
-        /* Close Button */
+        /* Close Button 
         .popup-close-btn {
             position: absolute;
             top: 16px;
@@ -877,7 +877,7 @@
             transform: rotate(90deg) scale(0.95);
         }
 
-        /* Contact CTA Button */
+        /* Contact CTA Button 
         .popup-contact-btn {
             position: absolute;
             bottom: 20px;
@@ -912,7 +912,7 @@
             box-shadow: 0 4px 12px rgba(198, 40, 40, 0.3);
         }
 
-        /* Christmas Popup Animations */
+        /* Christmas Popup Animations 
         @keyframes fadeIn {
             from {
                 opacity: 0;
@@ -933,12 +933,12 @@
             }
         }
 
-        /* Prevent body scroll when popup is open */
+        /* Prevent body scroll when popup is open 
         body.popup-open {
             overflow: hidden;
         }
 
-        /* Responsive Tablet (768px and below) */
+        /* Responsive Tablet (768px and below) 
         @media (max-width: 768px) {
             .popup-container {
                 width: 95vw;
@@ -962,7 +962,7 @@
             }
         }
 
-        /* Responsive Mobile (480px and below) */
+        /* Responsive Mobile (480px and below) 
         @media (max-width: 480px) {
             .popup-container {
                 width: 98vw;
@@ -987,12 +987,13 @@
             }
         }
 
-        /* Accessibility */
+        /* Accessibility 
         .popup-close-btn:focus,
         .popup-contact-btn:focus {
             outline: 3px solid #D4AF37;
             outline-offset: 2px;
         }
+        END OF COMMENTED POPUP STYLES */
 
         /* Responsive Design */
         @media (max-width: 1100px) {
@@ -1457,18 +1458,16 @@
             </div>
         </div>
     </footer>
-<!-- 		
-    <!-- Christmas Popup - ADDED HERE -->
+
+    <!-- COMMENTED OUT: Christmas Popup - ADDED HERE
     <div class="popup-overlay" id="popupOverlay">
         <div class="popup-container">
-            <!-- Popup Image -->
             <img 
                 src="nbsI.png" 
                 alt="Christmas Sale - 360 Virtual Tour Service"
                 class="popup-image"
             >
             
-            <!-- Close Button -->
             <button 
                 class="popup-close-btn" 
                 id="popupCloseBtn"
@@ -1478,7 +1477,6 @@
                 ✕
             </button>
 
-            <!-- Contact CTA Button -->
             <a 
                 href="https://newbharatskills.in/contact.php" 
                 class="popup-contact-btn"
@@ -1490,7 +1488,8 @@
             </a>
         </div>
     </div>
- -->
+    END OF COMMENTED POPUP HTML -->
+
     <script>
         // Mobile Menu Toggle
         document.querySelector('.mobile-menu').addEventListener('click', function() {
@@ -1635,8 +1634,8 @@
             heroVideo.setAttribute('muted', '');
             heroVideo.setAttribute('autoplay', '');
         }
-<!-- 
-        // Christmas Popup Integration - ADDED HERE
+
+        /* COMMENTED OUT: Christmas Popup Integration - ADDED HERE
         const CHRISTMAS_POPUP_CONFIG = {
             popupId: 'popupOverlay',
             closeButtonId: 'popupCloseBtn',
@@ -1725,8 +1724,8 @@
             if (e.key === 'Escape' && window.christmasPopup) {
                 window.christmasPopup.close();
             }
-        }); -->
+        });
+        END OF COMMENTED POPUP JAVASCRIPT */
     </script>
 </body>
 </html>
-
