--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
 
         .btn {
             display: inline-block;
-            background-color: var(--secondary);
+            background-color:#e55a00;
             color: var(--white);
             padding: 0.9rem 2rem;
             border-radius: 4px;
@@ -473,7 +473,7 @@
         }
 
         .btn:hover {
-            background-color: #e55a00;
+            background-color: #c95002;
             transform: translateY(-3px);
             box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
         }
@@ -1880,4 +1880,5 @@
     </script>
 </body>
 </html>
+
 
