--- a/index.html
+++ b/index.html
@@ -1363,7 +1363,7 @@
             </div>
         </div>
     </header>
-
+   <main id="main-content">
     <!-- Updated Hero Section with Video Background -->
     <section class="hero" id="main-content">
         <!-- Background Video -->
@@ -1441,7 +1441,7 @@
                 </div>
                 <div class="project-iframe" id="tour-2">
                     <!-- Embedded 360 Tour -->
-                    <iframe src="https://www.google.com/maps/embed?pb=!4v1767612320275!6m8!1m7!1sCAoSHENJQUJJaENRdHlNcGhJdUVyYVNyNWJjLUlJMEM.!2m2!1d18.9548143534162!2d73.1668391892827!3f241.34!4f-5.780000000000001!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!4v1767612320275!6m8!1m7!1sCAoSHENJQUJJaENRdHlNcGhJdUVyYVNyNWJjLUlJMEM.!2m2!1d18.9548143534162!2d73.1668391892827!3f241.34!4f-5.780000000000001!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="360 Virtual Tour of GARG SKY Ajivali"></iframe>
                 </div>
             </div>
 
@@ -1492,7 +1492,7 @@
                 </div>
                 <div class="project-iframe" id="tour-2">
                     <!-- Embedded 360 Tour -->
-                    <iframe src="https://www.google.com/maps/embed?pb=!4v1767612342386!6m8!1m7!1sCAoSHENJQUJJaERqd0s4LWRTNTk2NzcweHlGZ2FjSkE.!2m2!1d19.07221620467219!2d72.99618664884964!3f254.52!4f2.980000000000004!5f0.4000000000000002" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!4v1767612342386!6m8!1m7!1sCAoSHENJQUJJaERqd0s4LWRTNTk2NzcweHlGZ2FjSkE.!2m2!1d19.07221620467219!2d72.99618664884964!3f254.52!4f2.980000000000004!5f0.4000000000000002" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="360 Virtual Tour of Bikaner House, Vashi"></iframe>
                 </div>
             </div>
 
@@ -1572,6 +1572,7 @@
             <a href="https://newbharatskills.in/contact.php" class="btn btn-light">Get Your Virtual Tour</a>
         </div>
     </section>
+   </main>
 
     <!-- Footer -->
     <footer>
@@ -1880,5 +1881,6 @@
     </script>
 </body>
 </html>
+
 
 
