--- a/index.html
+++ b/index.html
@@ -1414,7 +1414,7 @@
                     </div>
                 </div>
                 <div class="agency-badge">
-                    <img src="google_street_veiw_trusted_agency.png" alt="Google Street View Trusted Agency Badge">
+                    <img src="google_street_veiw_trusted_agency.jpeg" alt="Google Street View Trusted Agency Badge">
                     <p style="margin-top: 10px; font-weight: 500;">Official Google Street View Trusted Agency</p>
                 </div>
             </div>
@@ -1881,6 +1881,7 @@
     </script>
 </body>
 </html>
+
 
 
 
