--- a/index.html
+++ b/index.html
@@ -1544,7 +1544,7 @@
             
             <div class="cards-container">
                 <div class="card">
-                    <img src="https://newbharatskills.in/image/image (3).png" alt="Digital Marketing, SEO & Website Development">
+                    <img src="https://jha360.com/image%20(1).jpeg" alt="Digital Marketing, SEO & Website Development">
                     <div class="card-content">
                         <h3>Digital Marketing, SEO & Website Development</h3>
                         <p>Driving growth through smart digital presence</p>
@@ -1553,7 +1553,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="https://newbharatskills.in/image/image (4).png" alt="Google Professional Services">
+                    <img src="https://jha360.com/image.jpeg" alt="Google Professional Services">
                     <div class="card-content">
                         <h3>Google Professional Services</h3>
                         <p>Empowering success with certified Google expertise</p>
@@ -1881,6 +1881,7 @@
     </script>
 </body>
 </html>
+
 
 
 
